# download-organizer

./: README.md  main.py  pyproject.toml
.github/workflows/: build.yml
config/: settings.py
core/: base_service.py  base_worker.py  worker_factory.py
gui/: category_panel.py  handlers.py  main_window.py  table_manager.py  worker_manager.py
models/: category_option.py  move_history.py  move_plan.py  move_result.py
services/: analysis_service.py  analyzer.py  duplicate_file_service.py  duplicate_finder.py  file_move_service.py  file_mover.py  history_service.py  large_file_finder.py  large_file_service.py  old_file_finder.py  old_file_service.py  organization_service.py  organizer.py  undo_service.py
utils/: format_utils.py  logger.py  path_utils.py
workers/: analyzer_worker.py  duplicate_worker.py  file_mover_worker.py  large_file_worker.py  old_file_worker.py  organizer_worker.py  undo_worker.py
