[project]
name = "download-organizer"
version = "0.1.0"
description = "Download Organizer for Windows"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "PySide6>=6.9.0",
    "PySide6-Fluent-Widgets>=1.8.7",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.15.0",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]